--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
-        "srmklive/paypal": "~1.0"
+        "srmklive/paypal": "~1.0",
+        "stripe/stripe-php": "^10.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
