--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
+        "pusher/pusher-php-server": "^7.2",
         "srmklive/paypal": "~1.0",
         "stripe/stripe-php": "^10.12"
     },
